Correstions in code