@@ -1,5 +1,6 @@
 package com.infoshareacademy;
 
+
 import java.io.IOException;
 
 public class ScreenCleaner {
@@ -7,12 +8,12 @@ public class ScreenCleaner {
   public void cleanScreen() {
     try {
       if (System.getProperty("os.name").contains("Windows")) {
-        Runtime.getRuntime().exec("cls");
+        new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
       } else {
         System.out.print("\033[H\033[2J");
         System.out.flush();
       }
-    } catch (IOException e) {
+    } catch (InterruptedException | IOException e) {
       System.out.println("Błąd systemu operacyjnego");
     }
   }
